--- a/Basic/my-db.yml
+++ b/Basic/my-db.yml
@@ -19,8 +19,8 @@ spec:
         image:  mysql:8.0
         volumeMounts:
         - name: db-data
-          mountPath: /var/lib/mysql
+          mountPath: "/var/lib/mysql"
       volumes:
         - name: db-data
-          PersistentVolumeClaim:
+          persistentVolumeClaim:
             claimName: mysql-data-pvc
