--- a/Basic/my-db.yml
+++ b/Basic/my-db.yml
@@ -17,6 +17,9 @@ spec:
       containers:
       - name:  mysql
         image:  mysql:8.0
+        env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: mypwd
         volumeMounts:
         - name: db-data
           mountPath: "/var/lib/mysql"
