--- a/Excersie/1/nginx-pod.yml
+++ b/Excersie/1/nginx-pod.yml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "ngnix-pod"
+  name: nginx-pod
   labels:
-    app: "ngnix"
+    app: nginx
 spec:
   containers:
-  - name: "ngnix"
-    image: "ngnix"
+  - name: nginx
+    image: nginx
     ports:
     - containerPort:  80
       name: http-nginx-svc
