--- a/Excersie/1/nginx-service.yml
+++ b/Excersie/1/nginx-service.yml
@@ -2,13 +2,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: ngnix-svc
+  name: nginx-svc
 spec:
   selector:
-    app: ngnix
+    app: nginx
   type: NodePort
   ports:
-  - name: ngnix
+  - name: nginx
     protocol: TCP
     port: 8080 #The port of this service
     #This is the actual port on which your application is running inside the container
