added the replica set to deployment file

--- a/Basic/nginx-deployment.yaml
+++ b/Basic/nginx-deployment.yaml
@@ -5,7 +5,9 @@ metadata:
   labels:
     app:  nginx
 spec:
+  minReadySeconds: 30
   replicas: 2
+  revisionHistoryLimit: 100 #rollout revision maintain
   selector:
     matchLabels:
       app: nginx
