--- a/Excersie/microservice/position-stimulator-deployment.yaml
+++ b/Excersie/microservice/position-stimulator-deployment.yaml
@@ -18,5 +18,5 @@ spec:
       - name:  position-stimulator
         image:  richardchesterwood/k8s-fleetman-position-simulator:release1
         env:
-        - name: SPRPING_PROFILES_ACTIVE
+        - name: SPRING_PROFILES_ACTIVE
           value: production-microservice
