--- a/Excersie/microservice/position-tracker-deployment.yaml
+++ b/Excersie/microservice/position-tracker-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name:  position-tracker
-        image:  richardchesterwood/k8s-fleetman-position-tracker:release3
+        image:  richardchesterwood/k8s-fleetman-position-tracker:release1-multi
         env:
         - name: SPRPING_PROFILES_ACTIVE
           value: production-microservice
