--- a/Basic/ConfigMap & Secret/my-app.yaml
+++ b/Basic/ConfigMap & Secret/my-app.yaml
@@ -21,12 +21,12 @@ spec:
         env:
         - name: MYSQL_USER
           valueFrom:
-            configMapKeyRef:
+            secretMapKeyRef:
               name: myapp-secret
               key: username    
         - name: MYSQL_PASSWORD
           valueFrom:
-            configMapKeyRef:
+            secretMapKeyRef:
               name: myapp-secret
               key: password                    
         - name: MYSQL_SERVER
