added configMap and secret with file

--- a/Basic/ConfigMap & Secret/file/my-app.yaml
+++ b/Basic/ConfigMap & Secret/file/my-app.yaml
@@ -30,5 +30,5 @@ spec:
             name: myapp-config-file
         - name:  db-secret
           secret:
-            name:  myapp-secret-file  
+            secretName:  myapp-secret-file  
           
